add pages in demo page

--- a/bioworld-app/src/app/pages/demo/demo.component.html
+++ b/bioworld-app/src/app/pages/demo/demo.component.html
@@ -3,11 +3,11 @@
         <h1>Demo</h1>
     </div>
     <div class="app-page__content">
-        demo content
-        <!-- <div class="navigation">
+
+        <div class="navigation">
             <a class="app-a" routerLink="./styles" routerLinkActive="app-a_active">Styles</a>
             <a class="app-a" routerLink="./shared" routerLinkActive="app-a_active">Shared</a>
-        </div> -->
+        </div>
 
         <router-outlet></router-outlet>
 
