--- a/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
+++ b/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
@@ -1,1 +1,6 @@
-<p>shared works!</p>
+<h2>Actions</h2>
+<app-button>Test Button</app-button>
+
+<!-- <app-button (click)="onToggleSpinner()">Toggle Spinner</app-button>
+<app-button (click)="onError()">Error</app-button>
+<app-button (click)="onSuccess()">Success</app-button> -->
