--- a/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
+++ b/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
@@ -6,7 +6,7 @@
 
     <br /><br /><br />
 
-    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline">
+    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline" [patternError]="regexErrors.numbers">
         <app-input formControlName="input"></app-input>
     </app-form-field>
 </form>
