--- a/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
+++ b/bioworld-app/src/app/pages/demo/pages/shared/shared.component.html
@@ -6,18 +6,23 @@
 
     <br /><br /><br />
 
-    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline" [patternError]="regexErrors.numbers">
+    <app-form-field label="Input" [required]="true" [control]="form.controls.input" [isInline]="isInline"
+        [patternError]="regexErrors.numbers">
         <app-input formControlName="input"></app-input>
     </app-form-field>
 
     <app-form-field label="Password" [required]="true" [control]="form.controls.password" [isInline]="isInline">
         <app-password formControlName="password"></app-password>
     </app-form-field>
-    
+
+    <app-form-field label="Autocomplete" [required]="true" [control]="form.controls.autocomplete" [isInline]="isInline">
+        <app-autocomplete formControlName="autocomplete" [items]="items"></app-autocomplete>
+    </app-form-field>
+
     <app-form-field label="Select" [required]="true" [control]="form.controls.select" [isInline]="isInline">
         <app-select formControlName="select" [items]="items"></app-select>
     </app-form-field>
-    
+
     <app-form-field label="Checkboxes" [required]="true" [control]="form.controls.checkboxes" [isInline]="isInline">
         <app-checkboxes formControlName="checkboxes" [items]="items"></app-checkboxes>
     </app-form-field>
@@ -36,7 +41,7 @@
         <app-date-range formControlName="dateRange">
         </app-date-range>
     </app-form-field>
-    
+
 </form>
 
 <code>
