add static pages

--- a/bioworld-app/src/app/components/header/header.component.html
+++ b/bioworld-app/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-    <div class="header__title">BioworldApp</div>
+    <div class="header__title" routerLink="/">BioworldApp</div>
     <div class="header__navigation">
         <a class="app-a" routerLink="demo" routerLinkActive="app-a_active">Demo</a>
 
