--- a/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
@@ -1,5 +1,5 @@
 <form #form="ngForm" (ngSubmit)="onSubmit(form.value)">
-  <ng-content></ng-content>
+  <ng-content select="h3"></ng-content>
   <label>
     Email address
     <input type="email" name="email" ngModel>
@@ -8,8 +8,6 @@
     Password
     <input type="password" name="password" ngModel>
   </label>
-  <button type="submit">
-    Submit
-  </button>
+  <ng-content select="button"></ng-content>
 </form>
 
