--- a/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
@@ -9,9 +9,8 @@
     <input type="password" name="password" ngModel>
   </label>
   <ng-content select="app-auth-remember"></ng-content>
-  <div *ngIf="showMessage">
-    You will be logged in for 30 days
-  </div>
+  <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')">
+  </app-auth-message>
   <ng-content select="button"></ng-content>
 </form>
 
