--- a/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/app/auth-form/auth-form.component.html
@@ -2,7 +2,7 @@
   <ng-content select="h3"></ng-content>
   <label>
     Email address
-    <input type="email" name="email" ngModel>
+    <input type="email" name="email" ngModel #email>
   </label>
   <label>
     Password
@@ -10,8 +10,8 @@
   </label>
   <ng-content select="app-auth-remember"></ng-content>
   <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')"></app-auth-message>
-  <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')"></app-auth-message>
-  <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')"></app-auth-message>
+<!--  <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')"></app-auth-message>-->
+<!--  <app-auth-message [style.display]="(showMessage ? 'inherit' : 'none')"></app-auth-message>-->
   <ng-content select="button"></ng-content>
 </form>
 
