--- a/angular-pro-src/01-content-projection/UltimateAngular/src/styles.scss
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/styles.scss
@@ -45,6 +45,7 @@ input[type=password] {
   padding: 6px 30px 6px 10px;
   border-radius: 1px;
   border: 1px solid #ccc;
+  width: 175px;
 }
 label {
   display: block;
