--- a/angular-pro-src/01-content-projection/UltimateAngular/src/styles.scss
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/styles.scss
@@ -56,7 +56,6 @@ button {
   padding: 5px 10px;
   text-align: center;
   color: #fff;
-  margin-left: 10px;
 }
 button:disabled {
   cursor: not-allowed;
@@ -86,19 +85,29 @@ app-root {
   border-radius: 2px;
   border: 1px solid #dce5f2;
   box-shadow: 0 1px 4px rgba(53,60,72,0.1);
-  padding: 30px;
+  padding: 20px 30px;
 }
-
+app-root > div {
+  display: flex;
+}
+form {
+  flex: 1 0;
+  padding: 0 40px;
+}
+input[type="text"] {
+  display: block;
+  border: none;
+  background: #ffffff;
+  font-size: 15px;
+  padding: 6px 30px 6px 10px;
+  border-radius: 1px;
+  border: 1px solid #eeeeee;
+  margin-top: 10px;
+  width: 260px;
+}
 label {
   margin-bottom: 20px;
 }
 h3 {
   margin-bottom: 20px;
-}
-auth-message {
-  margin-bottom: 20px;
-}
-.users {
-  margin-top: 20px;
-  display: flex;
 }
