--- a/angular-pro-src/01-content-projection/UltimateAngular/src/app/songs/components/songs-list/songs-list.component.scss
+++ b/angular-pro-src/01-content-projection/UltimateAngular/src/app/songs/components/songs-list/songs-list.component.scss
@@ -15,11 +15,11 @@
     position: absolute;
     top: 27px;
     right: 20px;
-    background: url(/img/favourite.svg) no-repeat 0 0;
+    background: url(/assets/img/favourite.svg) no-repeat 0 0;
     background-size: 20px 20px;
     cursor: pointer;
     &.active {
-      background: url(/img/favourite-active.svg) no-repeat 0 0;
+      background: url(/assets/img/favourite-active.svg) no-repeat 0 0;
       background-size: 20px 20px;
     }
   }
@@ -30,10 +30,10 @@
     top: 27px;
     right: 50px;
     cursor: pointer;
-    background: url(/img/played.svg) no-repeat 0 0;
+    background: url(/assets/img/played.svg) no-repeat 0 0;
     background-size: 20px 20px;
     &.active {
-      background: url(/img/played-active.svg) no-repeat 0 0;
+      background: url(/assets/img/played-active.svg) no-repeat 0 0;
       background-size: 20px 20px;
     }
   }
@@ -44,6 +44,7 @@
       background: #f5f4f5;
     }
     p {
+      color: #545e6f;
       font: {
         size: 18px;
         margin: 0;
